--- a/sixyumi.html
+++ b/sixyumi.html
@@ -18,31 +18,33 @@
               <li><a href="login.html">ログイン</a></li>
           </ul>
       </nav>
-  </header>
+    </header>
+
     <div class="container">
-      <h1 class="heading">sixyumi</h1>
-      <p class="note">
-        Change Room mode (before join in a room):
-        <a href="#">mesh</a> / <a href="#sfu">sfu</a>
-      </p>
+      <h1 id="categori" class="heading">趣味</h1>
       <div class="room">
         <div>
           <video id="js-local-stream"></video>
-          <span id="js-room-mode"></span>:
-          <input type="text" placeholder="Room Name" id="js-room-id">
-          <button id="js-join-trigger">Join</button>
-          <button id="js-leave-trigger">Leave</button>
+          <!--<span id="js-room-mode"></span>-->  <!--sfu meshとか-->
+          <!--span インフラ要素としてグループ化　スタイルシートで指定するとか-->
+          <!--<input type="text" placeholder="Room Name" id="js-room-id">--><!--悩み-->
+          <input class="roomlog" type="text" placeholder= "Room Name" id="js-room-id">
+
+          <button onclick="click1()" id="js-join-trigger">参加する</button>
+          <script>
+            function click1() {
+              document.getElementById("js-room-id").value = document.title;//HTMLのタイトルをもってきてる
+            }
+          </script>
+
+          <button id="js-leave-trigger">離脱する</button>
         </div>
-
         <div class="remote-streams" id="js-remote-streams"></div>
-
-        <div>
+        <div> <!--チャット-->
           <pre class="messages" id="js-messages"></pre>
           <input type="text" id="js-local-text">
           <button id="js-send-trigger">Send</button>
         </div>
-      </div>
-      <p class="meta" id="js-meta"></p>
     </div>
     <script src="//cdn.webrtc.ecl.ntt.com/skyway-latest.js"></script>
     <script src="./script.js"></script>
