--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>高齢者向けビデオチャット</title>
-        <meta name ="kaiwa" content="高齢者同士で楽しく会話ができる場を提供">
+        <meta name ="description" content="高齢者同士で楽しく会話ができる場を提供">
 
         <!---css-->
         <link href="https://fonts.googleapis.com/css?family=M+PLUS+1p" rel="stylesheet">
